docs: add Scalus Starter tutorial and redirect generation script
Add comprehensive tutorial for building a token minting DApp covering
smart contracts, transaction building, REST API, and testing.

--- a/scalus-site/content/learning/index.mdx
+++ b/scalus-site/content/learning/index.mdx
@@ -12,6 +12,12 @@ import { Callout } from 'nextra/components'
 **Note:** This section is being updated frequently with new patterns and best practices.
 </Callout>
 
+## Tutorials
+
+Hands-on guides for building complete applications:
+
+- **[Scalus Starter](/docs/learning/scalus-starter)** - Build a complete token minting DApp with smart contracts, transaction building, REST API, and testing
+
 ## Security
 
 Essential security knowledge for smart contract development:
