feat: add Output type alias for TransactionOutput
Add `type Output = TransactionOutput` and `val Output = TransactionOutput`
aliases, following the existing pattern used for Input/TransactionInput.
Replace TransactionOutput( constructor calls with Output( in tests and
documentation for consistency and brevity.

Note: PaymentSplitterTxBuilderTest.scala retains TransactionOutput( due to
a local Output case class that would conflict with the alias.

--- a/scalus-site/content/transaction-builder/building-first-transaction.mdx
+++ b/scalus-site/content/transaction-builder/building-first-transaction.mdx
@@ -241,8 +241,8 @@ If you already have UTXOs available in memory (e.g., from a previous query or a 
 ```scala copy
 // Pre-fetched or cached UTXOs from any source
 val availableUtxos: Utxos = Map(
-  TransactionInput(txHash, 0) -> TransactionOutput(sponsorAddress, Value.ada(100)),
-  TransactionInput(txHash, 1) -> TransactionOutput(sponsorAddress, Value.ada(50))
+  Input(txHash, 0) -> Output(sponsorAddress, Value.ada(100)),
+  Input(txHash, 1) -> Output(sponsorAddress, Value.ada(50))
 )
 
 // Synchronous - no Future, no async provider query
